<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditCalender">

    <TextView
        android:id="@+id/tv_ec_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/ec_home"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_ec_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/ec_title"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="53dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="109dp" />

    <TextView
        android:id="@+id/tv_ec_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:text="@string/ec_date"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ec_title" />

    <TextView
        android:id="@+id/tv_ec_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:text="@string/ec_time"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ec_date" />

    <TextView
        android:id="@+id/tv_ec_memo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:text="@string/ec_memo"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ec_time" />

    <Button
        android:id="@+id/btn_ec_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/ec_back"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/mt_ec_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="@+id/tv_ec_title"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="@+id/tv_ec_title" />

    <EditText
        android:id="@+id/mt_ec_fdate"
        android:layout_width="100dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="@+id/tv_ec_date"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="@+id/tv_ec_date" />

    <TextView
        android:id="@+id/tv_ec_datefe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/ec_sf"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/mt_ec_fdate"
        app:layout_constraintStart_toEndOf="@+id/mt_ec_fdate"
        app:layout_constraintTop_toTopOf="@+id/mt_ec_fdate" />

    <EditText
        android:id="@+id/mt_ec_ftime"
        android:layout_width="100dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="@+id/tv_ec_time"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="@+id/tv_ec_time" />

    <TextView
        android:id="@+id/tv_ec_timesf"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:text="@string/ec_sf"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/mt_ec_ftime"
        app:layout_constraintStart_toEndOf="@+id/mt_ec_ftime"
        app:layout_constraintTop_toTopOf="@+id/mt_ec_ftime" />

    <EditText
        android:id="@+id/mt_ec_etime"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="@+id/mt_ec_ftime"
        app:layout_constraintStart_toEndOf="@+id/tv_ec_timesf"
        app:layout_constraintTop_toTopOf="@+id/mt_ec_ftime"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/mt_ec_memo"
        android:layout_width="223dp"
        android:layout_height="291dp"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="@+id/tv_ec_memo"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="@+id/tv_ec_memo"
        app:layout_constraintVertical_bias="0.044" />

    <Button
        android:id="@+id/btn_ec_delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/ec_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_ec_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/ec_save"
        app:layout_constraintBottom_toTopOf="@+id/btn_ec_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/mt_ec_edate"
        android:layout_width="100dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="@+id/tv_ec_datefe"
        app:layout_constraintStart_toEndOf="@+id/tv_ec_datefe"
        app:layout_constraintTop_toTopOf="@+id/tv_ec_datefe" />

</androidx.constraintlayout.widget.ConstraintLayout>